# portmanager

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DEMO.md  PUBLIC_READINESS.md  RELEASE.md
examples/: ports.toml
examples/demo-workspace/api/: package.json
examples/demo-workspace/frontend/: package.json
examples/demo-workspace/infra/: docker-compose.yml
src/portmanager/: __init__.py  cli.py  completions.py  config.py  constants.py  guardrails.py  models.py  registry.py  scanner.py
tests/: test_cli.py  test_guardrails.py  test_registry.py  test_scanner.py
