[project]
name = "portmanager"
version = "0.1.0"
description = "Cross-agent port governance for local workspaces"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ports", "localhost", "development", "cli", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Networking",
]
dependencies = [
  "PyYAML>=6.0.2,<7",
  "tomli-w>=1.2.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9",
]

[project.scripts]
portmanager = "portmanager.cli:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
